; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/binutils/opcodes/extr_cgen-asm.c_cgen_parse_signed_integer.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/binutils/opcodes/extr_cgen-asm.c_cgen_parse_signed_integer.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i8* (%struct.TYPE_4__*, i32, i8**, i32, i32, i32*, i64*)* }

@CGEN_PARSE_OPERAND_INTEGER = common dso_local global i32 0, align 4
@BFD_RELOC_NONE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @cgen_parse_signed_integer(%struct.TYPE_4__* %0, i8** %1, i32 %2, i64* %3) #0 {
  %5 = alloca %struct.TYPE_4__*, align 8
  %6 = alloca i8**, align 8
  %7 = alloca i32, align 4
  %8 = alloca i64*, align 8
  %9 = alloca i64, align 8
  %10 = alloca i32, align 4
  %11 = alloca i8*, align 8
  store %struct.TYPE_4__* %0, %struct.TYPE_4__** %5, align 8
  store i8** %1, i8*** %6, align 8
  store i32 %2, i32* %7, align 4
  store i64* %3, i64** %8, align 8
  %12 = load %struct.TYPE_4__*, %struct.TYPE_4__** %5, align 8
  %13 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %12, i32 0, i32 0
  %14 = load i8* (%struct.TYPE_4__*, i32, i8**, i32, i32, i32*, i64*)*, i8* (%struct.TYPE_4__*, i32, i8**, i32, i32, i32*, i64*)** %13, align 8
  %15 = load %struct.TYPE_4__*, %struct.TYPE_4__** %5, align 8
  %16 = load i32, i32* @CGEN_PARSE_OPERAND_INTEGER, align 4
  %17 = load i8**, i8*** %6, align 8
  %18 = load i32, i32* %7, align 4
  %19 = load i32, i32* @BFD_RELOC_NONE, align 4
  %20 = call i8* %14(%struct.TYPE_4__* %15, i32 %16, i8** %17, i32 %18, i32 %19, i32* %10, i64* %9)
  store i8* %20, i8** %11, align 8
  %21 = load i8*, i8** %11, align 8
  %22 = icmp ne i8* %21, null
  br i1 %22, label %26, label %23

23:                                               ; preds = %4
  %24 = load i64, i64* %9, align 8
  %25 = load i64*, i64** %8, align 8
  store i64 %24, i64* %25, align 8
  br label %26

26:                                               ; preds = %23, %4
  %27 = load i8*, i8** %11, align 8
  ret i8* %27
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
